<resources>
    <string name="app_name">Tic-tac-toe</string>
    <string name="title_start_game">Начать игру</string>
    <string name="title_continue_game">Продолжить игру</string>
    <string name="title_settings">Настройки</string>
    <string name="dialog_continue_game">Продолжить игру</string>
    <string name="dialog_settings">Настройки</string>
    <string name="dialog_exit">Сохранить и выйти</string>
    <string name="settings_sound">Звук</string>
    <string name="settings_difficulty">Сложность</string>
    <string name="settings_game_rules">Правила игры</string>
    <string name="rules_vertical">Ряд по вертикали</string>
    <string name="rules_horizontal">Ряд по горизонтали</string>
    <string name="rules_diagonal">Ряд по диагонали</string>

    <string name="to_back">Вернуться</string>


    <string name="preference_file_key" translatable="false">shag.tic_tac_toe.file_key</string>

    <string-array name="game_level">
        <item>ЛЕГКО</item>
        <item>НОРМАЛЬНО</item>
        <item>СЛОЖНО</item>
    </string-array>
    <string name="dialog_status_win">Вы выиграли!</string>
    <string name="dialog_status_lose">Вы проиграли</string>
    <string name="dialog_status_draw">Ничья</string>
    <string name="popuo_menu_title_menu">Меню</string>
    <string name="game_status_ok">Ок</string>
</resources>