<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contsraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowBrightBC"
    android:foreground="?attr/selectableItemBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_main" />

    <TextView
        android:id="@+id/toNewGame"
        style="@style/style_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/title_start_game"
        app:layout_constraintBottom_toTopOf="@+id/toContinueGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/toContinueGame"
        style="@style/style_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/title_continue_game"
        app:layout_constraintBottom_toTopOf="@+id/toSettings"
        app:layout_constraintEnd_toEndOf="@+id/toNewGame"
        app:layout_constraintStart_toStartOf="@+id/toNewGame" />

    <TextView
        android:id="@+id/toSettings"
        style="@style/style_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/title_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toContinueGame"
        app:layout_constraintStart_toStartOf="@+id/toContinueGame" />


</androidx.constraintlayout.widget.ConstraintLayout>